// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableRow should match snapshot given file is being uploaded 1`] = `
<body>
  <div>
    <tr
      class="MuiTableRow-root css-34nofg-MuiTableRow-root"
    >
      <td
        class="MuiTableCell-root MuiTableCell-sizeMedium table-row__file-type-cell css-bsph2u-MuiTableCell-root"
      >
        <span
          aria-label="application/jpg"
          class=""
          data-mui-internal-clone-element="true"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="DescriptionIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"
            />
          </svg>
        </span>
      </td>
      <td
        class="table-row__file-name-cell MuiTableCell-root MuiTableCell-sizeMedium css-bsph2u-MuiTableCell-root"
      >
        Dog.png
      </td>
      <td
        class="table-row__dir-path-cell MuiTableCell-root MuiTableCell-sizeMedium css-bsph2u-MuiTableCell-root"
      >
        gdrive:Documents
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-alignRight MuiTableCell-sizeMedium table-row__file-size-cell css-r7oxtk-MuiTableCell-root"
      >
        10 kB
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-alignRight MuiTableCell-sizeMedium table-row__status-cell css-r7oxtk-MuiTableCell-root"
      >
        Uploading
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-alignRight MuiTableCell-sizeMedium table-row__cancel-button-cell css-r7oxtk-MuiTableCell-root"
      >
        <button
          aria-label="cancel upload"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
          data-testid="cancel-upload-button"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="CancelIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </td>
    </tr>
  </div>
</body>
`;

exports[`TableRow should update snapshot when file status has changed given file is being uploaded 1`] = `
<body>
  <div>
    <tr
      class="MuiTableRow-root css-34nofg-MuiTableRow-root"
    >
      <td
        class="MuiTableCell-root MuiTableCell-sizeMedium table-row__file-type-cell css-bsph2u-MuiTableCell-root"
      >
        <span
          aria-label="application/jpg"
          class=""
          data-mui-internal-clone-element="true"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="DescriptionIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"
            />
          </svg>
        </span>
      </td>
      <td
        class="table-row__file-name-cell MuiTableCell-root MuiTableCell-sizeMedium css-bsph2u-MuiTableCell-root"
      >
        Dog.png
      </td>
      <td
        class="table-row__dir-path-cell MuiTableCell-root MuiTableCell-sizeMedium css-bsph2u-MuiTableCell-root"
      >
        gdrive:Documents
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-alignRight MuiTableCell-sizeMedium table-row__file-size-cell css-r7oxtk-MuiTableCell-root"
      >
        10 kB
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-alignRight MuiTableCell-sizeMedium table-row__status-cell css-r7oxtk-MuiTableCell-root"
      >
        Success
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-alignRight MuiTableCell-sizeMedium table-row__cancel-button-cell css-r7oxtk-MuiTableCell-root"
      >
        <button
          aria-label="cancel upload"
          class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
          data-testid="cancel-upload-button"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="CancelIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
            />
          </svg>
        </button>
      </td>
    </tr>
  </div>
</body>
`;
